--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,35 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import "main.css";
+@import "clock.css";
+@import "weather.css";
+@import "center.css";
+@import "todo.css";
+@import "quote.css";
+
 .hidden {
     display: none;
+}
+
+.background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+ 
+    object-fit: cover;
+    background-color: rgb(9, 16, 67);
+    background-position: center;
+    opacity: 0.6;
+    z-index: -1;
+}
+
+div {
+    display: block;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+    overflow: clip;
 }
